--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -65,9 +65,9 @@
       padding-top: 40px;
     }
 
-    // ~#skiplink-container {
-    //   padding-top: 40px;
-    // }
+    ~#skiplink-container {
+      padding-top: 40px;
+    }
   }
 
   .govuk-quick-exit__container.govuk-quick-exit__enabled {
