--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -31,5 +31,6 @@
 @import "skip-link/index";
 @import "summary-list/index";
 @import "table/index";
+@import "task-list/index";
 @import "textarea/index";
 @import "warning-text/index";
