Add govuk-link class

--- a/src/govuk/components/task-list/template.njk
+++ b/src/govuk/components/task-list/template.njk
@@ -4,7 +4,7 @@
         <li class="govuk-task-list__item">
            <span class="app-task-list__task-name">
             {% if urlExists %}
-            <a href="{{ row.url.text }}">
+            <a class="govuk-link" href="{{ row.url.text }}">
               {{ row.title.text | safe if row.title.html else row.title.text }}
             </a>
             {% else %}
