--- a/src/govuk/components/task-list/template.njk
+++ b/src/govuk/components/task-list/template.njk
@@ -11,7 +11,7 @@
             {% endif %}
           </span>
           <span class="govuk-task-list__status">
-        <stong>
+        <strong>
           {{ row.status.text }}
         </strong>
         </span>
