--- a/src/govuk/components/task-list/template.njk
+++ b/src/govuk/components/task-list/template.njk
@@ -1,21 +1,26 @@
+{% set idPrefix = params.idPrefix if params.idPrefix else "task-list" %}
 <ul class="govuk-task-list">
   {% for row in params.rows %}
+    {% if row.hint %}
+      {%- set hintId = idPrefix + "-" + loop.index + "-hint" -%}
+    {% endif %}
+    {%- set statusId = idPrefix + "-" + loop.index + "-status" -%}
     <li class="govuk-task-list__item">
       <span class="govuk-task-list__task-name">
         {% if row.href %}
-          <a class="govuk-link" href="{{ row.href }}" aria-describedby="hint status">
+          <a class="govuk-link" href="{{ row.href }}" aria-describedby="{{ hintId + " " if row.hint }}{{ statusId }}">
             {{ row.title.html | safe if row.title.html else row.title.text }}
           </a>
         {% else %}
           {{ row.title.html | safe if row.title.html else row.title.text }}
           {% endif %}
         {% if row.hint %}
-          <span id="hint" class="govuk-task-list__hint"> 
-            {{ row.hint.html | safe if row.hint.html else row.hint.text }} 
+          <span id="{{ hintId }}" class="govuk-task-list__hint">
+            {{ row.hint.html | safe if row.hint.html else row.hint.text }}
           </span>
         {% endif %}
       </span>
-      <span id="status" class="govuk-task-list__status">
+      <span id="{{ statusId }}" class="govuk-task-list__status">
         {{ row.status.text }}
       </span>     
     </li>
