Fix font-size when Chrome autofills text inputs
For some reason Chrome decides that using its own font declaration is
preferable to keeping the input looking as it would without autofill.

This overrides that with GOV.UK Frontend’s bigger, better, default font.

--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -39,6 +39,10 @@
         border-width: $govuk-border-width-form-element * 2;
       }
     }
+
+    &::-webkit-autofill::first-line {
+      @include govuk-font($size: 19);
+    }
   }
 
   .govuk-input::-webkit-outer-spin-button,
