Remove ID from template
As the summary element is now within the button, this no longer needs to be referenced using "aria-labelled-by" This was previously being done as it was outside to create a relationship[1]

As a result the ID that is present on the template that has been used to associate these two aspects has been be removed.

[1] https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-labelledby_attribute

--- a/src/govuk/components/accordion/template.njk
+++ b/src/govuk/components/accordion/template.njk
@@ -13,7 +13,7 @@
             </span>
           </h{{ headingLevel }}>
           {% if item.summary.html or item.summary.text %}
-            <div class="govuk-accordion__section-summary govuk-body" id="{{ id }}-summary-{{ loop.index }}">
+            <div class="govuk-accordion__section-summary govuk-body">
               {{ item.summary.html | safe if item.summary.html else item.summary.text }}
             </div>
           {% endif %}
