Update hover state
The GOV.UK Focus state uses the box-shadow - used in this context this impacts the total height of the "Show all sections" button upon focus.

As a result when a user transitions from hover > focus the total height increase and the spacing between the button and the first section is not maintained.  

It creates a subtle but visually obvious increase in size that is not consistent with expectations.  This aims to adjust this visual so that hover state and the focus state visually maintain the same total height and bottom margin.

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -58,8 +58,8 @@
       position: relative;
       z-index: 1;
 
-      margin: 0 0 govuk-spacing(2) 0;
-      padding: 7px 2px 7px 0;
+      margin-bottom: 14px;
+      padding: 5px 2px 3px 0;
 
       border-width: 0;
 
@@ -78,6 +78,8 @@
       &:hover {
         color: $govuk-accordion-base-colour;
         background: $govuk-accordion-hover-colour;
+        // Mimic the focus styles so the height is the same changing from hover to focused
+        box-shadow: 0 -2px $govuk-accordion-hover-colour, 0 4px $govuk-accordion-hover-colour;
 
         .govuk-accordion__section-toggle-text {
           color: $govuk-accordion-base-colour;
