Update spacing while focused
While elements are focused on mobile - the individual focuses states have a tendency to overlap.  

This is partially because the "focus state Design" is slightly shorter than the actual focus styles that is in use[1]

Add some spacing between various elements on mobile. However this also enlarges to the total overall height of the element slightly.

[1]https://www.figma.com/file/3yTE9s4EOkvjcqRnqaIzgG/Accordion-Redesign?node-id=343%3A726

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -281,14 +281,14 @@
     // Add toggle link with Chevron icon on left.
     .govuk-accordion__section-toggle {
       @include govuk-font($size: 19, $line-height: 1);
-
       color: $govuk-link-colour;
+    }
 
-      // The NVDA fix means a display:inline element cannot receive box model spacing styling such as margin.
-      // As a result this is applied to the pseudo element that has a display:block property to maintain Design
-      &:before {
-        @include govuk-responsive-margin(1, "top");
-      }
+    // The NVDA fix means a display:inline element cannot receive box model spacing styling such as margin.
+    // As a result this is applied to the pseudo element that has a display:block property to maintain Design
+    .govuk-accordion__section-summary:before,
+    .govuk-accordion__section-toggle:before {
+      @include govuk-responsive-margin(1, "top");
     }
 
     // Hide body of expanded sections
