Change spacing on show-all button
Reduce the spacing while on smaller screens between the "Show all Button" and the start of the Accordion[1]

[1] (@christopherthomasdesign) 
"To me, on smaller screens the 'show all sections' looks a little bit far from the sections below."

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -58,7 +58,7 @@
       position: relative;
       z-index: 1;
 
-      margin-bottom: 14px;
+      margin-bottom: 9px;
       padding: 5px 2px 3px 0;
 
       border-width: 0;
@@ -68,6 +68,10 @@
 
       cursor: pointer;
       -webkit-appearance: none;
+
+      @include govuk-media-query ($from: desktop) {
+        margin-bottom: 14px;
+      }
 
       // Remove default button focus outline in Firefox
       &::-moz-focus-inner {
