--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -256,6 +256,16 @@
       }
     }
 
+    // As Chevron icon is vertically aligned it overlaps with the focus state bottom border
+    // Styling adds some spacing
+    .govuk-accordion__section-button:focus .govuk-accordion__section-toggle {
+      padding-bottom: 3px;
+
+      @include govuk-media-query ($from: desktop) {
+        padding-bottom: 2px;
+      }
+    }
+
     // NVDA fix
     //
     // NVDA treats any form of line break as a different announcement landmark and will therefore announce it separately.
