--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -125,7 +125,6 @@
 
     .govuk-accordion__section-heading {
       padding: 0;
-      border-top: $govuk-accordion-bottom-border-width solid $govuk-border-colour;
     }
 
     // Create Chevron icon aligned with text
@@ -198,9 +197,14 @@
     .govuk-accordion__section-button {
       width: 100%;
 
-      padding: govuk-spacing(2) 0 govuk-spacing(3);
+      padding: govuk-spacing(2) 0 govuk-spacing(1) 0;
 
-      border-width: 0;
+      border: 0;
+
+      border-top: $govuk-accordion-bottom-border-width solid $govuk-border-colour;
+      // Visually separate the section from the one underneath when user changes colours in their
+      // browser.
+      border-bottom: govuk-spacing(2) solid transparent;
 
       color: $govuk-text-colour;
       background: none;
@@ -259,6 +263,14 @@
         padding: 0;
         border: 0;
       }
+    }
+
+    // Remove the transparent border when the section is expanded to make it clear that the heading
+    // relates to the content below. Adjust padding to maintain the height of the element.
+    // See https://github.com/alphagov/govuk-frontend/pull/2257#issuecomment-951920798
+    .govuk-accordion__section--expanded .govuk-accordion__section-button {
+      padding-bottom: govuk-spacing(4);
+      border-bottom: 0;
     }
 
     // As Chevron icon is vertically aligned it overlaps with the focus state bottom border
