Add span parameter to footer sections
Allow having a footer section that spans multiple columns but does not
have multiple columns of list items. Useful if you have multiple rows of
sections and want to align a section with only a few items with a
section with many items (for instance the current GOV.UK footer layout).

--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -166,19 +166,21 @@
   }
 
   @include govuk-media-query ($from: desktop) {
+    .govuk-footer__section--columns-2,
     .govuk-footer__section--span-2 {
       grid-column: span 2; // Support: Grid
     }
 
-    .govuk-footer__section--span-2 .govuk-footer__list {
+    .govuk-footer__section--columns-2 .govuk-footer__list {
       column-count: 2; // Support: Columns
     }
 
+    .govuk-footer__section--columns-3,
     .govuk-footer__section--span-3 {
       grid-column: span 3; // Support: Grid
     }
 
-    .govuk-footer__section--span-3 .govuk-footer__list {
+    .govuk-footer__section--columns-3 .govuk-footer__list {
       column-count: 3; // Support: Columns
     }
   }
