Bugfix: stop arrow from receiving click events
The arrow was being positioned over the input using z-index, which meant it received click events which stopped the suggestions being fired.

One solution to avoid this is to position it underneath the input (using z-index) but to make the input background transparent. However this has a whole host of other issues.

A simpler alternative for now is to stop click events from firing by setting `pointer-events: none;`. This doesn't work in IE <11, so there might need to be some workarounds for that browser - eg adding the click handler to that element.

--- a/src/govuk/components/select/_index.scss
+++ b/src/govuk/components/select/_index.scss
@@ -51,32 +51,16 @@
   .govuk-select__drop-down-arrow {
     display: inline-block;
     position: absolute;
-
-    z-index: 1;
     top: 5px;
-    right: 15px;
-
+    right: 10px;
     width: 18px;
     height: 18px;
-
-    // Create a chevron using a box with borders on two sides, rotated 45deg.
-    &:before {
-      content: "";
-      display: block;
-
-      position: absolute;
-
-      width: 18px;
-      height: 18px;
-
-      margin: auto 0;
-
-      transform: rotate(45deg);
-
-      border: solid;
-      border-width: 0 2px 2px 0;
-      border-color: govuk_colour("black");
-    }
+    margin: auto 0;
+    transform: rotate(45deg);
+    border: solid;
+    border-width: 0 2px 2px 0;
+    border-color: govuk_colour("black");
+    pointer-events: none;
   }
 
   .govuk-select__option-list {
