--- a/app/views/examples/footer-alignment/index.njk
+++ b/app/views/examples/footer-alignment/index.njk
@@ -40,6 +40,7 @@
     "navigation": [
       {
         "title": "Single column list 1",
+        "width": "one-third",
         "columns": 1,
         "items": [
           {
@@ -58,6 +59,7 @@
       },
       {
         "title": "Single column list 2",
+        "width": "one-third",
         "columns": 1,
         "items": [
           {
@@ -76,6 +78,7 @@
       },
       {
         "title": "Single column list 3",
+        "width": "one-third",
         "columns": 1,
         "items": [
           {
@@ -123,6 +126,7 @@
     "navigation": [
       {
         "title": "Two column list",
+        "width": "two-thirds",
         "columns": 2,
         "items": [
           {
@@ -153,6 +157,7 @@
       },
       {
         "title": "Single column list",
+        "width": "one-third",
         "items": [
           {
             "href": "#1",
@@ -199,6 +204,7 @@
     "navigation": [
       {
         "title": "Single column list",
+        "width": "one-third",
         "items": [
           {
             "href": "#1",
@@ -216,6 +222,7 @@
       },
       {
         "title": "Two column list",
+        "width": "two-thirds",
         "columns": 2,
         "items": [
           {
@@ -281,6 +288,7 @@
     "navigation": [
       {
         "title": "Single column list",
+        "width": "one-half",
         "items": [
           {
             "href": "#1",
@@ -298,6 +306,7 @@
       },
       {
         "title": "Single column list",
+        "width": "one-half",
         "columns": 1,
         "items": [
           {
