Move template styles from core to objects layer

--- a/src/govuk/objects/_template.scss
+++ b/src/govuk/objects/_template.scss
@@ -1,4 +1,6 @@
-@include govuk-exports("govuk/core/template") {
+@import "../base";
+
+@include govuk-exports("govuk/objects/template") {
 
   // Applied to the <html> element
   .govuk-template {
