Highlight tag CSS added

--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -59,4 +59,39 @@
       float: right;
     }
   }
+
+  .tag {
+    margin: 0 0 0 10px;
+    padding: 2px 4px;
+  }
+
+  .tag-highlight {
+
+    &__not-started {
+        color: #00703c;
+        background-color: #dbffe5;
+    }
+
+    &__in-progress {
+        color: #00396b;
+        background-color: #e7edff;
+    }
+
+    &__completed {
+        color: #505a5f;
+    }
+
+    &__incomplete {
+        color: #9f0000;
+        background-color: #ffe7e8 ;
+    }
+
+    &__cannot-start-yet {
+        color: #b1b4b6;
+    }
+
+    &__mono {
+        background-color: #e1e4e6;
+    }
+  }
 }
